--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
             <p>
               Dentics is a well-known name in dental and oral care in New York.
               The journey of this institution started in 1990 under the hands of
-              Dr. Jonathon Doe, Gold Medalist of Harvard University. The journey
-              of this institution started in 1990 under the hands of Dr.
+              Dr. Jonathon Doe Gold Medalist of Harvard University. The journey
+              of this institution started in 1999 under the hands of Dr.
               Jonathon Doe,
             </p>
             <p>
