--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               all our solutions. highly driven and experienced professionals
               that aims to offer cutting-edge We provide technology professionals that
               aims to offer cutting-edge technology with competitive prices for
-              all our solutions. highly driven and experienced professionals professionals that
+              all our solutions. highly driven and experience professionals professionals that
               aims to offer cutting-edge technology with competitive prices for
               all our solutions. highly driven and experienced professionals competitive:
             </p>
