--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               We are a team of highly driven and experienced professionals that
               aims to offer cutting-edge technology with competitive prices for
               all our solutions. highly driven and experienced professionals
-              that aims to offer cutting edge We provide technology professionals that
+              that aims to the offer cutting edge We provide technology professionals that
               aims to offer cutting-edge technology with competitive prices for
               all our solutions. highly driven and experience professionals professionals that
               aims to offer cutting-edge technology with competitive prices for
