simple pblm solve

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
           <div class="patients-part__one">
             <h2>You’re in good Dentice</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              Lorem ipsum dolor site amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore
             </p>
             <div class="patients-part__items">
