--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
               <h1>Get in Touch</h1>
               <ul>
                 <li>
-                  <i class="fa-solid fa-location-dot"></i> Hajipara, Thakurgaon
+                  <i class="fa-solid fa-location-dot"></i> Hazipara, Thakurgaon
                 </li>
                 <li><i class="fa-solid fa-phone"></i> +880 1818702653</li>
                 <li>
