--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                 </li>
               </ul>
               <div class="footer-btn">
-                <button>Free Exam</button>
+                <button>Free Exams</button>
               </div>
             </div>
           </div>
