text pblm solve

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
               <h4>Sed ut perspiciatis unde omnis</h4>
               <p>
                 Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-                aut fugit, sed quia consequuntur magni dolores eosqui ratione
+                aut fugit sed quia consequuntur magni dolores eosqui ratione
                 voluptatem sequi nesciunt. Neque porro quisquam est,
               </p>
             </div>
