simple pblm check

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         <div class="patients-part-heading">
           <h3>Patient Reviews</h3>
           <p>
-            We are a team of highly driven and experienced professionals that
+            We are a team of highly driven and experienced professional that
             aims to offer cutting-edge technology<br />with competitive prices
             for all our solutions.
           </p>
