--- a/index.html
+++ b/index.html
@@ -490,10 +490,10 @@
               <div class="form-two">
                 <label for="fname">Address</label><br />
                 <select id="cars" name="cars">
-                  <option value="volvo">Hajipara, Thakurgaon</option>
-                  <option value="saab">Gazipur, Dhaka</option>
-                  <option value="fiat">Badda, Dhaka</option>
-                  <option value="audi">Bandarbon, Chottogram</option></select
+                  <option value="volvo">Hajipara, Thakurgaon.</option>
+                  <option value="saab">Gazipur, Dhaka.</option>
+                  <option value="fiat">Badda, Dhaka.</option>
+                  <option value="audi">Bandarbon, Chottogram.</option></select
                 ><br />
                 <label for="fname">Contact Hours</label><br />
                 <input
@@ -549,7 +549,7 @@
               <h1>Get in Touch</h1>
               <ul>
                 <li>
-                  <i class="fa-solid fa-location-dot"></i> Hazipara, Thakurgaon
+                  <i class="fa-solid fa-location-dot"></i> Hazipara, Thakurgaon.
                 </li>
                 <li><i class="fa-solid fa-phone"></i> +880 1818702653</li>
                 <li>
