--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               Helping patients achieve good dental health & beautiful the smile
               is a privilege & responsibility.<br />
               most is patients achieve good dental health & beautiful smile is a
-              privilege & responsibility.
+              privilege & responsibility true.
             </p>
             <div class="common-part__btn">
               <button class="btn-space">Free Exam - CTA</button>
