--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
         </div>
         <div class="patients-part">
           <div class="patients-part__one">
-            <h2>You’re in good Dentice</h2>
+            <h2>You're in good Dentice</h2>
             <p>
               Lorem ipsum dolor site amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore
