--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               aims to offer cutting-edge technology with competitive prices for
               all our solutions. highly driven and experienced professionals
               that aims to the offer cutting edge We provide technology professionals that
-              aims to offer cutting-edge technology with competitive prices for
+              aims to offer cutting-edge technology with a competitive prices for
               all our solutions. highly driven and experience professionals professionals that
               aims to offer cutting-edge technology with competitive prices for
               all our solutions. highly driven and experienced professionals competitive:
