--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <h2>Get to Know Us</h2>
             <p>
               We are a team of highly driven and experienced professionals that
-              aims to offer cutting-edge technology with competitive prices for
+              aims to offer cutting edge technology with competitive prices for
               all our solutions. highly driven and experienced professionals
               that aims to the offer cutting edge We provide technology professionals that
               aims to offer cutting-edge technology with a competitive prices for
