--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div class="container">
         <div class="awesome-heading">
           <div class="awesome-heading__text">
-            <h4>Why We’re Awesome</h4>
+            <h4>Why We're Awesome</h4>
           </div>
           <div class="awesome-heading__underline"></div>
         </div>
