--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
               <h2>Dr. Jeanette Hoff</h2>
               <p>Orthodontic Treatment<br />Yale Medical School</p>
               <div class="orthodontist-btn">
-                <button>Learn more</button>
+                <button>Learn More</button>
               </div>
             </div>
             <div class="orthodontist-card">
@@ -283,7 +283,7 @@
               <h2>Dr. Jeanette Hoff</h2>
               <p>Orthodontic Treatment<br />Yale Medical School</p>
               <div class="orthodontist-btn">
-                <button>Learn more</button>
+                <button>Learn More</button>
               </div>
             </div>
             <div class="orthodontist-card">
@@ -291,7 +291,7 @@
               <h2>Dr. Jeanette Hoff</h2>
               <p>Orthodontic Treatment<br />Yale Medical School</p>
               <div class="orthodontist-btn">
-                <button>Learn more</button>
+                <button>Learn More</button>
               </div>
             </div>
             <div class="orthodontist-card">
@@ -299,7 +299,7 @@
               <h2>Dr. Jeanette Hoff</h2>
               <p>Orthodontic Treatment<br />Yale Medical School</p>
               <div class="orthodontist-btn">
-                <button>Learn more</button>
+                <button>Learn More</button>
               </div>
             </div>
             <div class="orthodontist-card">
@@ -307,7 +307,7 @@
               <h2>Dr. Jeanette Hoff</h2>
               <p>Orthodontic Treatment<br />Yale Medical School</p>
               <div class="orthodontist-btn">
-                <button>Learn more</button>
+                <button>Learn More</button>
               </div>
             </div>
             <div class="orthodontist-card">
