--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
               <h2>Dr. Jeanette Hoff</h2>
               <p>Orthodontic Treatment<br />Yale Medical School</p>
               <div class="orthodontist-btn">
-                <button>Learn more</button>
+                <button>Learn More</button>
               </div>
             </div>
           </div>
